Source/ProjectFirma.Web/Content/Bootstrap/firma/base.theme.css
@font-face {
  font-family: 'Basic';
  font-style: normal;
  font-weight: 400;
  src: url(https://fonts.gstatic.com/s/basic/v15/xfu_0WLxV2_XKTNw6FQ.ttf) format('truetype');
}
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  font-stretch: normal;
  src: url(https://fonts.gstatic.com/s/opensans/v27/memSYaGs126MiZpBA-UvWbX2vVnXBbObj2OVZyOOSr4dVJWUgsjZ0B4gaVc.ttf) format('truetype');
}
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 600;
  font-stretch: normal;
  src: url(https://fonts.gstatic.com/s/opensans/v27/memSYaGs126MiZpBA-UvWbX2vVnXBbObj2OVZyOOSr4dVJWUgsgH1x4gaVc.ttf) format('truetype');
}
@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  src: url(https://fonts.gstatic.com/s/montserrat/v23/JTUHjIg1_i6t8kCHKm4532VJOt5-QNFgpCtr6Hw5aX8.ttf) format('truetype');
}
@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 700;
  src: url(https://fonts.gstatic.com/s/montserrat/v23/JTUHjIg1_i6t8kCHKm4532VJOt5-QNFgpCuM73w5aX8.ttf) format('truetype');
}
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: url(https://fonts.gstatic.com/s/roboto/v29/KFOmCnqEu92Fr1Mu4mxP.ttf) format('truetype');
}
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  src: url(https://fonts.gstatic.com/s/roboto/v29/KFOlCnqEu92Fr1MmWUlfBBc9.ttf) format('truetype');
}
@font-face {
  font-family: 'EB Garamond';
  font-style: normal;
  font-weight: 400;
  src: url(https://fonts.gstatic.com/s/ebgaramond/v24/SlGDmQSNjdsmc35JDF1K5E55YMjF_7DPuGi-6_RkBI96.ttf) format('truetype');
}
@font-face {
  font-family: 'EB Garamond';
  font-style: normal;
  font-weight: 700;
  src: url(https://fonts.gstatic.com/s/ebgaramond/v24/SlGDmQSNjdsmc35JDF1K5E55YMjF_7DPuGi-DPNkBI96.ttf) format('truetype');
}
html,
body {
  height: 100%;
}
body {
  font-family: "Open Sans", sans-serif;
  font-size: 14px;
  background-color: #f5f8fa;
  color: #193D5B;
  overflow-x: hidden;
}
input[disabled] {
  background-color: LightGray;
}
input.sitkaCurrency {
  width: 120px;
  text-align: right;
}
.alert {
  margin-top: 10px;
}
a:hover {
  text-decoration: none;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  color: #1e3948;
  font-family: "Open Sans", sans-serif;
  font-weight: 600;
}
.container {
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}
.pageTitle {
  font-weight: 600;
  color: #337ab7;
}
#mainnavandcontent {
  margin-bottom: 20px;
}
.firmaContent {
  background-color: #fff;
  border: 1px solid #e7e7e7;
  margin-top: 20px;
  padding-top: 10px;
}
.rightFloatingInfo {
  float: right;
  margin-top: 20px;
}
.hoverEditButton {
  position: absolute;
  right: 5px;
  top: -5px;
}
.hoverEditButton a.btn-firma {
  background-color: gray;
  color: white;
}
.hoverEmptySpace {
  width: 100%;
  height: 30px;
}
.firmaPageContent {
  background-color: inherit;
  -ms-transition: all 100ms ease-out;
  -o-transition: all 100ms ease-out;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}
.firmaPageContent:hover {
  background-color: #d3d3d3;
  background-color: rgba(211, 211, 211, 0.2);
}
.firmaPageContent .hoverEditButton {
  visibility: hidden;
  -ms-opacity: 0;
  opacity: 0;
  -ms-transition: all 100ms ease-out;
  -o-transition: all 100ms ease-out;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}
.firmaPageContent:hover .hoverEditButton {
  visibility: visible;
  -ms-opacity: 1;
  opacity: 1;
}
.glyphicon-trash {
  color: #337ab7;
}
.glyphicon-trash:hover {
  color: #286090;
}
form .form-group {
  margin-top: 20px;
  margin-bottom: 20px;
}
form .form-group-condensed {
  margin-top: 5px;
  margin-bottom: 5px;
}
.bootstrap-select.btn-group.open .dropdown-menu {
  z-index: 1100;
}
.wrapLongString {
  /* These are technically the same, but use both */
  overflow-wrap: break-word;
  word-wrap: break-word;
  -ms-word-break: break-all;
}
.header {
  background-color: #f8f8f8;
  padding: 10px;
}
.header img {
  margin: 5px;
  height: 50px;
}
.header .headerText {
  display: inline-block;
  font-size: 30px;
  font-weight: 600;
  font-family: "Open Sans", sans-serif;
  color: #337ab7;
  vertical-align: bottom;
  margin-bottom: 6px;
}
.header .headerText a {
  color: #337ab7;
  vertical-align: middle;
}
.header .headerText a:hover,
.header .headerText a:active {
  text-decoration: none;
}
.header .header-button {
  float: left;
  margin-top: 17px;
  margin-right: 5px;
}
@media (max-width: 991px) {
  div.header {
    height: auto;
  }
}
.navbar {
  background-color: #f8f8f8;
  border-bottom-color: #e7e7e7;
  border-radius: 0;
  margin-bottom: 2px;
}
.nav li p {
  padding: 0 15px 0 15px;
}
.nav li {
  font-weight: 600;
}
.nav li a {
  color: #777;
  font-family: "Open Sans", sans-serif;
}
.nav li a:hover {
  color: #777;
  background-color: #eee;
  text-decoration: none;
}
.nav li p a:hover {
  background-color: transparent;
}
.nav li .navbar-text {
  color: #777;
  font-family: "Open Sans", sans-serif;
}
.navbar-nav .joined-buttons a {
  display: inline-block;
}
.navbar-nav .joined-buttons .join-button-left {
  padding: 15px 2px 15px 15px;
}
.navbar-nav .joined-buttons .join-button-right {
  padding: 15px 15px 15px 2px;
}
.nav .open > a,
.nav .open > a:hover,
.nav .open > a:focus {
  background-color: #eee;
  border-color: #e7e7e7;
}
.navbar-right {
  padding-right: 15px;
}
@media (max-width: 767px) {
  .navbar-right {
    padding-right: 0;
  }
  .header .environment {
    margin-top: 0;
  }
}
.dropdown-menu {
  z-index: 16000;
}
ul.dropdown-menu {
  background-color: #f8f8f8;
  border: 1px solid #e7e7e7;
}
ul.dropdown-menu li a {
  font-weight: 600;
  font-family: "Open Sans", sans-serif;
  color: #777;
  background-color: #f8f8f8;
}
ul.dropdown-menu li a:hover {
  background-color: #eee;
  color: #777;
  text-decoration: none;
}
ul.dropdown-menu .divider {
  background-color: #e7e7e7;
}
/* ... */

